--- a/commonStyle.css
+++ b/commonStyle.css
@@ -1,50 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-:root{
-    --black:#000;
-    --white:#ffffff;
-    --lightgrey:#f1f1f1;
-    --darkblue:#0d102c;
-    --primarycolor:#3d51f2;
-    --secondarycolor:#5670ef;
-    --lightDark:#080A25;
-    --darkText:#8388B4;
- }
- 
+
+:root {
+    --black: #000;
+    --white: #ffffff;
+    --lightgrey: #f1f1f1;
+    --darkblue: #0d102c;
+    --primarycolor: #3d51f2;
+    --secondarycolor: #5670ef;
+    --lightDark: #080A25;
+    --darkText: #8388B4;
+}
+
 /* common styles */
-section{
+section {
     width: 95%;
     max-width: 1200px;
     margin: auto;
     margin-top: 2em;
 }
 
-.gridSection{
+.gridSection {
     display: grid;
     align-items: center;
     gap: 40px;
     margin-bottom: 5em;
 }
 
-#sectionPic{
+#sectionPic {
     width: 100%;
     max-width: 550px;
     margin: auto;
 }
 
-.sectionPic img{
+.sectionPic img {
     width: 100%;
 }
 
-p{
+p {
     color: var(--lightgrey);
 }
 
-.darkPara{
+.darkPara {
     color: var(--darkText);
     font-weight: 500;
 }
 
-.btn{
+.btn {
     border: 1px solid #fff;
     border-radius: 50px;
     background-color: transparent;
@@ -54,51 +55,101 @@ p{
     cursor: pointer;
 }
 
-.btn1{
+.btn1 {
     margin-right: 1em;
 }
 
-.btn2{
+.btn2 {
     border: none;
 }
 
-.primaryBtn{
+.primaryBtn {
     background-color: var(--primarycolor);
 }
 
 @keyframes bounce {
-    0% {transform:translateY(-30px);}
-    50% {transform:translateY(30px);}
-    100% { transform:translateY(-30px)}
-  }
-
-.bouncepic img{
-   animation: bounce 15s infinite;    
+    0% { transform: translateY(-30px); }
+    50% { transform: translateY(30px); }
+    100% { transform: translateY(-30px); }
 }
 
-.sectionHeader{
+.bouncepic img {
+    animation: bounce 15s infinite;
+}
+
+.sectionHeader {
     color: var(--white);
     font-size: 2rem;
     margin-bottom: .7em;
 }
 
-.sectionPara{
+.sectionPara {
     font-size: 1.1rem;
     margin-bottom: 3em;
 }
 
-@media screen and (min-width:800px) {
-    section{
+@media screen and (min-width: 800px) {
+    section {
         width: 85%;
-    }   
-    
-    .gridSection{
+    }
+
+    .gridSection {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media screen and (min-width:1000px){
-    .sectionHeader{
+@media screen and (min-width: 1000px) {
+    .sectionHeader {
         font-size: 3em;
+    }
+}
+
+/* Mobile Menu Styles */
+#nav {
+    display: none;
+    background-color: #333;
+    color: white;
+    padding: 1em;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    text-align: center;
+}
+
+#nav.showNav {
+    display: block;
+}
+
+/* Styles for the hamburger icon */
+#bar {
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+}
+
+#nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#nav ul li {
+    margin: 1em 0;
+}
+
+#nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+@media (max-width: 768px) {
+    /* Hide the nav by default */
+    #nav {
+        display: none;
+    }
+
+    #bar {
+        display: block;  /* Show the hamburger icon */
     }
 }
