--- a/style.css
+++ b/style.css
@@ -201,7 +201,8 @@ header{
     display: grid;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 100%;
+    font-size: 14px
     margin-bottom: 0em;
 }
 
