--- a/style.css
+++ b/style.css
@@ -198,11 +198,11 @@ header{
 
 .carouselPrice{
     color: var(--darkblue);
-    display: grid;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    font-size: 14px
+    font-size: 1px
     margin-bottom: 0em;
 }
 
