--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ header{
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    font-size: 1px
+    font-size: 1px;
     margin-bottom: 0em;
 }
 
