--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ header{
     align-items: center;
     width: 70%;
     margin-bottom: 1em;
-    font-size: 0.9rem;
+    font-weight: 500;
 }
 
 .carouselDiscount{
